--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <section class="max-w-3xl mx-auto px-4 py-6">
     <h2 class="text-2xl font-semibold text-blue-400 mb-4">Kontak</h2>
     <ul class="space-y-2 text-gray-300">
-      <li>Email: <a href="mailto:kamu@email.com" class="text-blue-400 hover:underline">kamu@email.com</a></li>
-      <li>LinkedIn: <a href="https://linkedin.com/in/kamu" class="text-blue-400 hover:underline">linkedin.com/in/kamu</a></li>
-      <li>GitHub: <a href="https://github.com/username" class="text-blue-400 hover:underline">github.com/username</a></li>
+      <li>Email: <a href="mailto:rioivano5@gmail.com" class="text-blue-400 hover:underline">rioivano5@gmail.com</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/kamu" class="text-blue-400 hover:underline">linkedin.com/in/rioivano</a></li>
+      <li>GitHub: <a href="https://github.com/username" class="text-blue-400 hover:underline">github.com/rioivano</a></li>
     </ul>
   </section>
 
