--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <h2 class="text-2xl font-semibold text-blue-400 mb-4">Kontak</h2>
     <ul class="space-y-2 text-gray-300">
       <li>Email: <a href="mailto:rioivano5@gmail.com" class="text-blue-400 hover:underline">rioivano5@gmail.com</a></li>
-      <li>LinkedIn: <a href="https://linkedin.com/in/kamu" class="text-blue-400 hover:underline">linkedin.com/in/rioivano</a></li>
-      <li>GitHub: <a href="https://github.com/username" class="text-blue-400 hover:underline">github.com/rioivano</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/rioivano" class="text-blue-400 hover:underline">linkedin.com/in/rioivano</a></li>
+      <li>GitHub: <a href="https://github.com/rioivano" class="text-blue-400 hover:underline">github.com/rioivano</a></li>
     </ul>
   </section>
 
   <!-- Footer -->
   <footer class="text-center py-6 text-sm text-gray-500">
-    &copy; 2025 Rio Ivano. Dibuat dengan ❤️ dan Tailwind CSS.
+    &copy; 2025 Rio Ivano. Dibuat dengan ❤️.
   </footer>
 
 </body>
