--- a/index.html
+++ b/index.html
@@ -10,12 +10,48 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <style>
       /* Tambahan jika kamu butuh font custom */
+      html {
+        scroll-behavior: smooth;
+    }
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
     </style>
   </head>
   <body class="bg-gray-900 text-white">
+    <!-- Floating Header with Hamburger Menu -->
+    <nav class="sticky top-0 z-50 bg-gray-900/80 backdrop-blur-md shadow-md">
+    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
+        
+        <!-- Site Title (optional) - only on mobile -->
+        <div class="text-white font-semibold md:hidden">Rio Ivano</div>
+
+        <!-- Centered Nav - hidden on mobile -->
+        <div class="hidden md:flex justify-center w-full space-x-6 text-sm sm:text-base">
+        <a href="#about" class="text-gray-300 hover:text-blue-400 transition">About</a>
+        <a href="#skills" class="text-gray-300 hover:text-blue-400 transition">Skills</a>
+        <a href="#education" class="text-gray-300 hover:text-blue-400 transition">Education</a>
+        <a href="#experience" class="text-gray-300 hover:text-blue-400 transition">Experience</a>
+        <a href="#contact" class="text-gray-300 hover:text-blue-400 transition">Contact</a>
+        </div>
+
+        <!-- Hamburger Menu Button -->
+        <button id="menu-btn" class="md:hidden text-white focus:outline-none">
+        <i class="bi bi-list text-2xl"></i>
+        </button>
+    </div>
+
+    <!-- Mobile Menu Dropdown -->
+    <div id="mobile-menu" class="md:hidden hidden px-4 pb-4 space-y-2 bg-gray-900/90 backdrop-blur-md">
+        <a href="#about" class="block text-gray-300 hover:text-blue-400 transition">About</a>
+        <a href="#skills" class="block text-gray-300 hover:text-blue-400 transition">Skills</a>
+        <a href="#education" class="block text-gray-300 hover:text-blue-400 transition">Education</a>
+        <a href="#experience" class="block text-gray-300 hover:text-blue-400 transition">Experience</a>
+        <a href="#contact" class="block text-gray-300 hover:text-blue-400 transition">Contact</a>
+    </div>
+    </nav>
+
+    
     <!-- Header -->
     <header class="text-center py-8 px-4">
       <h1 class="text-3xl sm:text-4xl font-bold text-white">
@@ -27,7 +63,7 @@
     </header>
 
     <!-- About Me -->
-    <section class="max-w-5xl mx-auto px-4 py-6">
+    <section id="about" class="max-w-5xl mx-auto px-4 py-6">
       <h2 class="text-2xl font-semibold text-blue-400 mb-4">About Me</h2>
       <div
         class="flex flex-col-reverse md:flex-row items-center md:items-start gap-6">
@@ -68,7 +104,7 @@
     </section>
 
     <!-- Skills -->
-    <section class="max-w-5xl mx-auto px-4 py-6">
+    <section id="skills" class="max-w-5xl mx-auto px-4 py-6">
       <h2 class="text-2xl font-semibold text-blue-400 mb-4">Skills</h2>
       <div class="grid sm:grid-cols-2 gap-4">
         <!-- Frontend Development -->
@@ -156,7 +192,7 @@
     </section>
 
     <!-- Educations -->
-    <section class="max-w-5xl mx-auto px-4 py-4">
+    <section id="education" class="max-w-5xl mx-auto px-4 py-4">
       <h2 class="text-2xl font-semibold text-blue-400 mb-4">Education</h2>
       <div class="grid gap-4 sm:grid-cols-2">
         <div
@@ -173,7 +209,7 @@
     </section>
 
     <!-- Works Experience -->
-    <section class="max-w-5xl mx-auto px-4 py-4">
+    <section id="experience" class="max-w-5xl mx-auto px-4 py-4">
       <h2 class="text-2xl font-semibold text-blue-400 mb-4">
         Works Experience
       </h2>
@@ -206,7 +242,7 @@
     </section>
 
     <!-- Contacts -->
-    <section class="max-w-5xl mx-auto px-4 py-6">
+    <section id="contact" class="max-w-5xl mx-auto px-4 py-6">
       <h2 class="text-2xl font-semibold text-blue-400 pb-1">Contacts</h2>
       <p class="text-base text-gray-400 mb-4">
         I'm always open to exciting collaborations, freelance projects, or
@@ -290,6 +326,13 @@
           ? "bi bi-volume-mute-fill text-xl"
           : "bi bi-volume-up-fill text-xl";
       });
+
+       const menuBtn = document.getElementById('menu-btn');
+       const mobileMenu = document.getElementById('mobile-menu');
+
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
     </script>
   </body>
 </html>
