--- a/index.html
+++ b/index.html
@@ -8,67 +8,113 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+      rel="stylesheet" />
     <style>
       /* Tambahan jika kamu butuh font custom */
       html {
         scroll-behavior: smooth;
-    }
+      }
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
     </style>
   </head>
   <body class="bg-gray-900 text-white">
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <!-- Floating Header with Hamburger Menu -->
     <nav class="sticky top-0 z-50 bg-gray-900/80 backdrop-blur-md shadow-md">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-        
+      <div
+        class="max-w-6xl mx-auto px-4 py-5 flex items-center justify-between">
         <!-- Site Title (optional) - only on mobile -->
         <div class="text-white font-semibold md:hidden">Rio Ivano</div>
 
         <!-- Centered Nav - hidden on mobile -->
-        <div class="hidden md:flex justify-center w-full space-x-6 text-sm sm:text-base">
-        <a href="#about" class="text-gray-300 hover:text-blue-400 transition">About</a>
-        <a href="#skills" class="text-gray-300 hover:text-blue-400 transition">Skills</a>
-        <a href="#education" class="text-gray-300 hover:text-blue-400 transition">Education</a>
-        <a href="#experience" class="text-gray-300 hover:text-blue-400 transition">Experience</a>
-        <a href="#contact" class="text-gray-300 hover:text-blue-400 transition">Contact</a>
+        <div
+          class="hidden md:flex justify-center w-full space-x-6 text-sm sm:text-base">
+          <a href="#about" class="text-gray-300 hover:text-blue-400 transition"
+            >About</a
+          >
+          <a href="#skills" class="text-gray-300 hover:text-blue-400 transition"
+            >Skills</a
+          >
+          <a
+            href="#education"
+            class="text-gray-300 hover:text-blue-400 transition"
+            >Education</a
+          >
+          <a
+            href="#experience"
+            class="text-gray-300 hover:text-blue-400 transition"
+            >Experience</a
+          >
+          <a
+            href="#contact"
+            class="text-gray-300 hover:text-blue-400 transition"
+            >Contact</a
+          >
         </div>
 
         <!-- Hamburger Menu Button -->
         <button id="menu-btn" class="md:hidden text-white focus:outline-none">
-        <i class="bi bi-list text-2xl"></i>
+          <i class="bi bi-list text-2xl"></i>
         </button>
-    </div>
+      </div>
 
-    <!-- Mobile Menu Dropdown -->
-    <div id="mobile-menu" class="md:hidden hidden px-4 pb-4 space-y-2 bg-gray-900/90 backdrop-blur-md">
-        <a href="#about" class="block text-gray-300 hover:text-blue-400 transition">About</a>
-        <a href="#skills" class="block text-gray-300 hover:text-blue-400 transition">Skills</a>
-        <a href="#education" class="block text-gray-300 hover:text-blue-400 transition">Education</a>
-        <a href="#experience" class="block text-gray-300 hover:text-blue-400 transition">Experience</a>
-        <a href="#contact" class="block text-gray-300 hover:text-blue-400 transition">Contact</a>
-    </div>
+      <!-- Mobile Menu Dropdown -->
+      <div
+        id="mobile-menu"
+        class="md:hidden hidden px-4 pb-4 space-y-2 bg-gray-900/90 backdrop-blur-md">
+        <a
+          href="#about"
+          class="block text-gray-300 hover:text-blue-400 transition"
+          >About</a
+        >
+        <a
+          href="#skills"
+          class="block text-gray-300 hover:text-blue-400 transition"
+          >Skills</a
+        >
+        <a
+          href="#education"
+          class="block text-gray-300 hover:text-blue-400 transition"
+          >Education</a
+        >
+        <a
+          href="#experience"
+          class="block text-gray-300 hover:text-blue-400 transition"
+          >Experience</a
+        >
+        <a
+          href="#contact"
+          class="block text-gray-300 hover:text-blue-400 transition"
+          >Contact</a
+        >
+      </div>
     </nav>
 
-    
     <!-- Header -->
-    <header class="text-center py-8 px-4">
+    <header
+      class="text-center px-4 py-8 min-h-screen sm:min-h-[auto] flex flex-col justify-center items-center"
+      data-aos="fade-in">
       <h1 class="text-3xl sm:text-4xl font-bold text-white">
         <span class="text-blue-400">Rio Ivano</span>
       </h1>
-      <p class="text-gray-300 mt-2 text-base sm:text-lg">
+      <p class="text-gray-300 mt-2 text-base sm:text-lg max-w-md">
         Programmer • Web Developer • Software Developer • IT Enthusiast
       </p>
     </header>
 
     <!-- About Me -->
     <section id="about" class="max-w-5xl mx-auto px-4 py-6">
-      <h2 class="text-2xl font-semibold text-blue-400 mb-4">About Me</h2>
+      <h2 class="text-2xl font-semibold text-blue-400 mb-4" data-aos="fade-in">
+        About Me
+      </h2>
       <div
         class="flex flex-col-reverse md:flex-row items-center md:items-start gap-6">
         <!-- Text Section -->
-        <div class="md:w-2/3">
+        <div class="md:w-2/3" data-aos="fade-right">
           <p class="text-gray-300 leading-relaxed text-justify">
             My name is Rio Ivano, born on January 2, 2001, in Jakarta, and
             currently residing in South Tangerang. I am an IT Developer with 2
@@ -94,7 +140,9 @@
         </div>
 
         <!-- Image Section -->
-        <div class="md:w-1/3 flex justify-center md:justify-end">
+        <div
+          data-aos="fade-left"
+          class="md:w-1/3 flex justify-center md:justify-end shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-400 hover:rounded-md">
           <img
             src="images/profile.jpg"
             alt="Rio Ivano"
@@ -105,11 +153,14 @@
 
     <!-- Skills -->
     <section id="skills" class="max-w-5xl mx-auto px-4 py-6">
-      <h2 class="text-2xl font-semibold text-blue-400 mb-4">Skills</h2>
+      <h2 class="text-2xl font-semibold text-blue-400 mb-4" data-aos="fade-in">
+        Skills
+      </h2>
       <div class="grid sm:grid-cols-2 gap-4">
         <!-- Frontend Development -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">
             Frontend Development
           </h3>
@@ -120,21 +171,24 @@
 
         <!-- Backend Development -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">Backend Development</h3>
           <p class="text-gray-300">Express.js, CodeIgniter, .NET</p>
         </div>
 
         <!-- Databases & ORM -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">Databases & ORM</h3>
           <p class="text-gray-300">MySQL, MongoDB, Sequelize, Sequelize CLI</p>
         </div>
 
         <!-- Mobile & Desktop Development -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">
             Mobile & Desktop Development
           </h3>
@@ -143,14 +197,16 @@
 
         <!-- CMS & Framework -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">CMS & Framework</h3>
           <p class="text-gray-300">WordPress, CodeIgniter</p>
         </div>
 
         <!-- DevOps & Tools -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">
             DevOps & Developer Tools
           </h3>
@@ -161,7 +217,8 @@
 
         <!-- Cloud & Analytics -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">Cloud & Analytics</h3>
           <p class="text-gray-300">
             Grafana, Google Analytics, Google Cloud Console, Google API
@@ -170,21 +227,24 @@
 
         <!-- AI & Automation -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">AI & Automation</h3>
           <p class="text-gray-300">ChatGPT, Gemini AI, Perplexity AI</p>
         </div>
 
         <!-- Design & Multimedia -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">Design & Multimedia</h3>
-          <p class="text-gray-300">Figma, Adobe Premiere</p>
+          <p class="text-gray-300">Figma, Adobe Premiere, Canva</p>
         </div>
 
         <!-- Scripting & Shell -->
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-in"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white mb-2">Scripting & Shell</h3>
           <p class="text-gray-300">PowerShell, GitBash</p>
         </div>
@@ -193,15 +253,19 @@
 
     <!-- Educations -->
     <section id="education" class="max-w-5xl mx-auto px-4 py-4">
-      <h2 class="text-2xl font-semibold text-blue-400 mb-4">Education</h2>
+      <h2 class="text-2xl font-semibold text-blue-400 mb-4" data-aos="fade-in">
+        Education
+      </h2>
       <div class="grid gap-4 sm:grid-cols-2">
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-right"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PAMULANG UNIVERSITY</h3>
           <p class="text-gray-400 text-sm">Graduate Degree | 2018 - 2023</p>
         </div>
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          data-aos="fade-left"
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">SMA N 2 KOTA SOLOK</h3>
           <p class="text-gray-400 text-sm">Senior High School | 2015 - 2018</p>
         </div>
@@ -209,30 +273,33 @@
     </section>
 
     <!-- Works Experience -->
-    <section id="experience" class="max-w-5xl mx-auto px-4 py-4">
+    <section
+      id="experience"
+      class="max-w-5xl mx-auto px-4 py-4"
+      data-aos="fade-up">
       <h2 class="text-2xl font-semibold text-blue-400 mb-4">
         Works Experience
       </h2>
       <div class="grid gap-4 sm:grid-cols-2">
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">
             PT Bina Citra Teknologi (AnyBoard)
           </h3>
           <p class="text-gray-400 text-sm">Programmer | 2024 - now</p>
         </div>
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PT Jenaka Rumah Kreatif</h3>
           <p class="text-gray-400 text-sm">Programmer | 2023 - now</p>
         </div>
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PT Inara Solusi Unggul</h3>
           <p class="text-gray-400 text-sm">IT Staff | 2022 - 2023</p>
         </div>
         <div
-          class="bg-gray-800 rounded-xl p-4 shadow-md hover:ring-2 hover:ring-blue-500 transition">
+          class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PT Melisa Yousuf Media</h3>
           <p class="text-gray-400 text-sm">
             Internship | March - November 2021
@@ -242,7 +309,10 @@
     </section>
 
     <!-- Contacts -->
-    <section id="contact" class="max-w-5xl mx-auto px-4 py-6">
+    <section
+      id="contact"
+      class="max-w-5xl mx-auto px-4 py-6"
+      data-aos="fade-down">
       <h2 class="text-2xl font-semibold text-blue-400 pb-1">Contacts</h2>
       <p class="text-base text-gray-400 mb-4">
         I'm always open to exciting collaborations, freelance projects, or
@@ -302,37 +372,10 @@
     </a>
 
     <!-- Background Music Audio -->
-    <audio id="bg-music" autoplay loop>
+    <audio id="bg-music" loop>
       <source src="audios/audio2_23am.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-
-    <!-- Mute Button Floating -->
-    <button
-      id="toggle-mute"
-      class="fixed bottom-6 right-6 bg-blue-600 hover:bg-blue-700 text-white p-2 rounded-full shadow-lg transition"
-      title="Toggle Music">
-      <i class="bi bi-volume-up-fill text-xl"></i>
-    </button>
-
-    <script>
-      const audio = document.getElementById("bg-music");
-      const toggleBtn = document.getElementById("toggle-mute");
-      const icon = toggleBtn.querySelector("i");
-
-      toggleBtn.addEventListener("click", () => {
-        audio.muted = !audio.muted;
-        icon.className = audio.muted
-          ? "bi bi-volume-mute-fill text-xl"
-          : "bi bi-volume-up-fill text-xl";
-      });
-
-       const menuBtn = document.getElementById('menu-btn');
-       const mobileMenu = document.getElementById('mobile-menu');
-
-        menuBtn.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
