--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div
         class="flex flex-col-reverse md:flex-row items-center md:items-start gap-6">
         <!-- Text Section -->
-        <div class="md:w-2/3" data-aos="fade-right">
+        <div class="md:w-2/3" data-aos="fade-in">
           <p class="text-gray-300 leading-relaxed text-justify">
             My name is Rio Ivano, born on January 2, 2001, in Jakarta, and
             currently residing in South Tangerang. I am an IT Developer with 2
@@ -141,7 +141,7 @@
 
         <!-- Image Section -->
         <div
-          data-aos="fade-left"
+          data-aos="fade-in"
           class="md:w-1/3 flex justify-center md:justify-end shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-400 hover:rounded-md">
           <img
             src="images/profile.jpg"
@@ -258,13 +258,13 @@
       </h2>
       <div class="grid gap-4 sm:grid-cols-2">
         <div
-          data-aos="fade-right"
+          data-aos="fade-in"
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PAMULANG UNIVERSITY</h3>
           <p class="text-gray-400 text-sm">Graduate Degree | 2018 - 2023</p>
         </div>
         <div
-          data-aos="fade-left"
+          data-aos="fade-in"
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">SMA N 2 KOTA SOLOK</h3>
           <p class="text-gray-400 text-sm">Senior High School | 2015 - 2018</p>
