--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">
-            PT Bina Citra Teknologi (AnyBoard)
+            PT Bina Citra Teknologi
           </h3>
-          <p class="text-gray-400 text-sm">Programmer | 2024 - now</p>
+          <p class="text-gray-400 text-sm">Software Engineer | May 2024 - now</p>
         </div>
         <div
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PT Jenaka Rumah Kreatif</h3>
-          <p class="text-gray-400 text-sm">Programmer | 2023 - now</p>
+          <p class="text-gray-400 text-sm">Programmer | Jun 2023 - Jul 2025</p>
         </div>
         <div
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
