--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
         <div
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PT Inara Solusi Unggul</h3>
-          <p class="text-gray-400 text-sm">IT Staff | 2022 - 2023</p>
+          <p class="text-gray-400 text-sm">IT Staff | Jun 2022 - May 2023</p>
         </div>
         <div
           class="bg-gray-800 rounded-xl p-4 shadow-md transition-all duration-300 hover:shadow-[0_0_15px_3px_rgba(59,130,246,0.6)] hover:ring-2 hover:ring-blue-500">
           <h3 class="text-lg font-bold text-white">PT Melisa Yousuf Media</h3>
           <p class="text-gray-400 text-sm">
-            Internship | March - November 2021
+            Internship | Mar - Nov 2021
           </p>
         </div>
       </div>
