update index html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="md:w-2/3" data-aos="fade-in">
           <p class="text-gray-300 leading-relaxed text-justify">
             My name is Rio Ivano, born on January 2, 2001, in Jakarta, and
-            currently residing in South Tangerang. I am an IT Developer with 2
+            currently residing in South Tangerang. I am an Programmer with 4+
             years of professional experience in programming and software
             development, currently working at PT Bina Citra Teknologi.
             Throughout my career, I have gained expertise in various programming
